--- a/styles/globals.css
+++ b/styles/globals.css
@@ -28,7 +28,28 @@
     object-fit: contain;
 }
 
-.left_2 {}
+.color-label {
+    position: absolute;
+    top: 50%;
+    left: 80%;
+    transform: translateX(-50%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 2px;
+    font-size: 10px;
+    font-weight: 400;
+    background-color: white;
+    border: 1px solid rgb(173, 173, 173);
+    border-radius: 2px;
+    z-index: 1;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+  }
+
+.image-container:hover .color-label {
+  opacity: 1;
+}
 
 .left_2 img {
     width: 500px;
