--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+.prod-shadow {
+    box-shadow: 0px 0px 2.5px;
+    border-radius: 15px;
+}
+
+.prodimg-border{
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+}
+
 .dropdown .dropdown-submenu {
     top: -10px;
     position: absolute;
