--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+.prod-slugimg{
+    box-shadow: 0px 0px 2px;
+}
+
+.prod-sideimg{
+    box-shadow: 0px 0px 2px;
+    border-radius: 10px;
+}
+
 .prod-shadow {
     box-shadow: 0px 0px 2.5px;
     border-radius: 15px;
